@@ -2,6 +2,7 @@
 
 	* util.c, util.h: Add utility function read_file, which reads an
 	  entire binary file into a buffer.
+	* dmidecode.c: Add passing of flags parameter to dmi_table.
 
 2015-04-20  Jean Delvare  <jdelvare@suse.de>
 
